--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql = TRUE
 spring.jpa.properties.hibernate.show_sql = TRUE
 spring.jpa.hibernate.ddl-auto = update
+app.default.password=12345
