--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql = TRUE
 spring.jpa.properties.hibernate.show_sql = TRUE
 spring.jpa.hibernate.ddl-auto = update
 app.default.password=12345
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
