--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto = update
 app.default.password=12345
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+logging.file.path=D:\\logs\\
+logging.level.root=warn
+logging.level.org.springframework=INFO
